<resources>
    <string name="app_name">NEUFirebase</string>
    <string name="welcome">Welcome!</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="empty_message">Email or Password is empty.</string>
</resources>
